# dv-image

./: .gitignore  docker-compose.yaml
crop/: backtracking.py  run.py
docs/: requirements.md
reference-photos/: info.json
subjects/: 1.json  2.json  3.json  4.json  5.json
worker.a/: pyproject.toml  requirements.txt
worker.a/clients/: AMQP.py  __init__.py  amqp.py  bg-removal.py  s3.py
worker.a/crop/: __init__.py
