[tool.poetry]
name = "worker-a"
version = "0.1.0"
description = ""
authors = ["Abdallah Ragab <abdallahsameh1140@gmail.com>"]
readme = "README.md"
packages = [{include = "worker"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
