[tool.poetry]
name = "worker-a"
version = "0.1.0"
description = ""
authors = ["Abdallah Ragab <abdallahsameh1140@gmail.com>"]
readme = "README.md"
packages = [{include = "worker"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.1"
boto3 = "^1.34.144"
requests = "^2.32.3"
pika = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
